<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_item_home"
        android:title="@string/mainActivity_nav_item_home"
        android:icon="@drawable/ic_nav_home"/>

    <item
        android:id="@+id/nav_item_mygroups"
        android:title="@string/mainActivity_nav_item_mygroups"
        android:icon="@drawable/ic_nav_group"/>

    <item
        android:id="@+id/nav_item_achievement"
        android:title="@string/mainActivity_nav_item_achievement"
        android:icon="@drawable/ic_nav_achievement"/>

    <group android:id="@+id/group_settings_id">

        <item
            android:id="@+id/nav_item_settings"
            android:title="@string/mainActivity_nav_item_settings"
            android:icon="@drawable/ic_nav_settings"/>

        <item
            android:id="@+id/nav_item_help"
            android:title="@string/mainActivity_nav_item_help"
            android:icon="@drawable/ic_nav_help"/>

        <item
            android:id="@+id/nav_item_logout"
            android:title="@string/mainActivity_nav_item_logout"
            android:icon="@drawable/ic_nav_logout"/>

    </group>

</menu>