<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/fragment_new_group_field_hint_name"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_new_group_field_hint_desc"/>

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/SpinnerEsporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:spinnerMode="dropdown"
            android:prompt="@string/fragment_new_group_field_prompt_spinner_sports"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

        <Switch
            android:id="@+id/SwitchAtividade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/fragment_new_group_field_label_marcaratv"/>

        <include
            android:id="@+id/ViewAtividade"
            layout="@layout/fragment_atividade_register"/>

        <Button
            android:id="@+id/btnNewGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_new_group_button_label_new_group"
            android:theme="@style/AppTheme.Button"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>